--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "PREFIX": "x!", 
-  "TOKEN": "YOUR TOKEN", 
+  "PREFIX": "!", 
+  "TOKEN": "NzYyMjk2NjI4NzQwMjI3MTEy.X3nGDw.MVouPg5feu7hFzGAIwIblE2NRQA", 
   "YOUTUBE_API_KEY": "AIzaSyBQoFoHSThiADXuKtnSpKNRnxIboQI54UM",
   "QUEUE_LIMIT": 0,
   "COLOR": "BLUE"
